--- a/yaak/yaak.rq_jEud7nFccq.yaml
+++ b/yaak/yaak.rq_jEud7nFccq.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_jEud7nFccq
 createdAt: 2025-08-28T00:00:07.439119
-updatedAt: 2025-08-28T00:10:43.314441
+updatedAt: 2025-09-19T13:16:32.663601200
 workspaceId: wk_94bVhSAcpy
 folderId: fl_gQ2VqcuSam
 authentication: {}
@@ -13,6 +13,6 @@ description: ''
 headers: []
 method: GET
 name: Get Categories
-sortPriority: 0.001
+sortPriority: 2000.0
 url: http://localhost:8091/categories/
 urlParameters: []
