--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -44,6 +44,13 @@ spring:
     username: guest
     password: guest
 
+app:
+  rabbitmq:
+    exchange: b2g.exchange
+    queue:
+      user-signup: user.signup
+    routing-key:
+      signup-ticket: rk.user.registration
 
 services:
   restaurant:
