--- a/notification-service/src/main/resources/application-dev.properties
+++ b/notification-service/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=catalog-service
+spring.application.name=notification-service
   
   # Server Configuration
 server.port=8092
@@ -25,3 +25,12 @@ jwt.audience=b2g-microservices
   # Logging
 logging.level.com.b2g.catalogservice=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.debug=true
