feat(notification): user signup listener

--- a/notification-service/src/main/resources/application-dev.properties
+++ b/notification-service/src/main/resources/application-dev.properties
@@ -34,3 +34,8 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.debug=true
+
+app.rabbitmq.exchange=b2g.exchange
+app.rabbitmq.queue.user-signup=user.signup
+app.rabbitmq.routing-key.signup-ticket=rk.user.registration
+app.confirmation.base-url=http://localhost:8090
