chore(recommendation) : Model and Repository started [WIP]

--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -2,18 +2,14 @@ spring.application.name=recommendation-service
   
   # Server Configuration
 server.port=8095
-  
-#  # Database Configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_recommendation
-#spring.datasource.username=user
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=org.postgresql.Driver
-  
-  # JPA Configuration
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.format_sql=true
+
+spring.neo4j.uri= bolt://localhost:7687
+spring.neo4j.authentication.username= guest
+spring.neo4j.authentication.password= guest
+
+spring.data.neo4j.database= b2g_graph
+spring.neo4j.pool.max-connection-pool-size=100
+
   
   # JWT Configuration
 jwt.keys.directory=./dev-keys
