--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ spring.application.name=recommendation-service
 server.port=8095
 
 spring.neo4j.uri= bolt://localhost:7687
-spring.neo4j.authentication.username= guest
-spring.neo4j.authentication.password= guest
+spring.neo4j.authentication.username= neo4j
+spring.neo4j.authentication.password= guest12345
 
-spring.data.neo4j.database= b2g_graph
+spring.data.neo4j.database= neo4j
 spring.neo4j.pool.max-connection-pool-size=100
 
   
