--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -16,3 +16,8 @@ jwt.keys.directory=./dev-keys
 jwt.expiration.access-token=900000
 jwt.issuer=b2g-auth-service
 jwt.audience=b2g-microservices
+
+app.rabbitmq.routing-keys=book.#,user.#,review.#
+app.rabbitmq.exchange= b2g.exchange
+app.rabbitmq.queue.name= recommendation.queue
+
