fix(recommendation) : fixed Bindings problems and errors arised from previous renaming

--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -13,10 +13,11 @@ spring.neo4j.pool.max-connection-pool-size=100
   
   # JWT Configuration
 jwt.keys.directory=./dev-keys
+
 jwt.issuer=b2g-auth-service
 jwt.audience=b2g-microservices
 
 app.rabbitmq.routing-keys=book.#,user.#,review.#
-app.rabbitmq.exchange= b2g.exchange
-app.rabbitmq.queue.name= recommendation.queue
+app.rabbitmq.exchange= b2g.topic.exchange
+app.rabbitmq.queue.name= recommendation
 
