chore(review + recommendation) : Added Pageable , added Tags to graph and minor fixes

--- a/review-service/src/main/resources/application-dev.properties
+++ b/review-service/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=recommendation-service
+spring.application.name=review-service
   
   # Server Configuration
 server.port=8096
