chore(project structure) : last commit before migration

--- a/yaak/yaak.fl_GBXwSTx9Sx.yaml
+++ b/yaak/yaak.fl_GBXwSTx9Sx.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_GBXwSTx9Sx
 createdAt: 2025-08-24T18:26:03.457182
-updatedAt: 2025-08-24T18:26:06.640602
+updatedAt: 2025-10-28T14:36:17.828267900
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Authentication
-sortPriority: 1000.0
+sortPriority: 4000.0
