--- a/yaak/yaak.fl_gQ2VqcuSam.yaml
+++ b/yaak/yaak.fl_gQ2VqcuSam.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_gQ2VqcuSam
 createdAt: 2025-08-27T17:56:28.336504
-updatedAt: 2025-08-27T17:56:28.336505
+updatedAt: 2025-10-28T14:36:17.824138200
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Catalog
-sortPriority: -1756317400000.0
+sortPriority: 3000.0
