feat(authentication) : now protected urls can be validated by contacting auth service on InternalAuthenticationController to validate and retrieve the tokens

--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -51,6 +51,7 @@ app:
       user-signup: user.signup
     routing-key:
       signup-ticket: rk.user.registration
+      user-confirmation: rk.user.created
 
 services:
   restaurant:
