--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -2,6 +2,7 @@ spring.application.name=recommendation-service
   
   # Server Configuration
 server.port=8096
+authService.internal.url=http://localhost:8090/internal
 
 spring.neo4j.uri= bolt://localhost:7687
 spring.neo4j.authentication.username= neo4j
