--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -100,7 +100,13 @@
 			<artifactId>spring-webflux</artifactId>
 			<version>6.2.10</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.b2g.commons</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
