--- a/review-service/src/main/resources/application-dev.properties
+++ b/review-service/src/main/resources/application-dev.properties
@@ -2,6 +2,7 @@ spring.application.name=review-service
   
   # Server Configuration
 server.port=8097
+authService.internal.url=http://localhost:8090/internal
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_reviews
