--- a/notification-service/src/main/resources/application-dev.properties
+++ b/notification-service/src/main/resources/application-dev.properties
@@ -35,7 +35,16 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.debug=true
 
-app.rabbitmq.exchange=b2g.exchange
-app.rabbitmq.queue.user-signup=user.signup
+
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+
+app.rabbitmq.queue.name= notification
+app.rabbitmq.exchange=b2g.topic.exchange
+app.rabbitmq.queue.user-signup=notification.user.signup
 app.rabbitmq.routing-key.signup-ticket=rk.user.registration
 app.confirmation.base-url=http://localhost:8090
+
+
