--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -91,7 +91,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.13.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.b2g.commons</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
