--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -11,14 +11,18 @@ spring.neo4j.authentication.password= guest12345
 spring.data.neo4j.database= neo4j
 spring.neo4j.pool.max-connection-pool-size=100
 
-  
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+app.rabbitmq.exchange= b2g.topic.exchange
+app.rabbitmq.queue.name= recommendation
+#app.rabbitmq.routing-keys=book.#,user.#,review.#
   # JWT Configuration
 jwt.keys.directory=./dev-keys
 
 jwt.issuer=b2g-auth-service
 jwt.audience=b2g-microservices
 
-app.rabbitmq.routing-keys=book.#,user.#,review.#
-app.rabbitmq.exchange= b2g.topic.exchange
-app.rabbitmq.queue.name= recommendation
+
 
