--- a/yaak/yaak.rq_fg4gAcjDNk.yaml
+++ b/yaak/yaak.rq_fg4gAcjDNk.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_fg4gAcjDNk
 createdAt: 2025-11-18T17:46:46.335086200
-updatedAt: 2025-11-20T17:57:37.612981800
+updatedAt: 2025-11-24T22:43:58.143330700
 workspaceId: wk_94bVhSAcpy
 folderId: fl_cCZgPgtyUM
 authentication: {}
@@ -18,17 +18,25 @@ url: http://localhost:8096/recommendations/
 urlParameters:
 - enabled: true
   name: categoryIds
-  value: 00000000-0000-0000-0000-000000000402
-  id: XtAMD9kYRE
-- enabled: false
-  name: categoryIds
   value: 00000000-0000-0000-0000-000000000401
+  id: XtAMD9kYRE
+- enabled: true
+  name: categoryIds
+  value: 00000000-0000-0000-0000-000000000107
   id: pI5jVj7ZXZ
 - enabled: false
   name: mustHaveAll
   value: 'true'
   id: C5jefeYBuR
 - enabled: true
+  name: page
+  value: '0'
+  id: YGWexZWMU0
+- enabled: true
+  name: size
+  value: '5'
+  id: IH0TksI3Mx
+- enabled: true
   name: ''
   value: ''
-  id: iQVbJuzwvz
+  id: PS86qeKumS
