--- a/yaak/yaak.rq_yyvzAXsVZ7.yaml
+++ b/yaak/yaak.rq_yyvzAXsVZ7.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_yyvzAXsVZ7
 createdAt: 2025-08-24T18:26:19.353274
-updatedAt: 2025-08-25T15:37:08.679091
+updatedAt: 2025-11-24T21:04:18.952700700
 workspaceId: wk_94bVhSAcpy
 folderId: fl_GBXwSTx9Sx
 authentication: {}
@@ -10,7 +10,7 @@ authenticationType: none
 body:
   text: |-
     {
-      "refreshToken": "2ba52bdf-1191-40bb-948d-1af7384bca10"
+      "refreshToken": "cd6f05eb-d8eb-49ca-9f15-b26ea1d460e7"
     }
 bodyType: application/json
 description: ''
