feat(Reader service) :

--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -16,13 +16,11 @@ spring.rabbitmq.port= 5672
 spring.rabbitmq.username= guest
 spring.rabbitmq.password= guest
 app.rabbitmq.exchange= b2g.topic.exchange
-app.rabbitmq.queue.name= recommendation
-#app.rabbitmq.routing-keys=book.#,user.#,review.#
-  # JWT Configuration
-jwt.keys.directory=./dev-keys
+app.rabbitmq.service.prefix=recommendation
 
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
+#spring.rabbitmq.publisher-confirm-type= correlated
+#spring.rabbitmq.publisher-returns= true
+app.rabbitmq.bindingkey.book.creation=book.created
 
 
 
