--- a/catalog-service/src/main/resources/application-dev.properties
+++ b/catalog-service/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@ spring.application.name=catalog-service
 # Server Configuration
 server.port=8091
 
+
+authService.internal.url=http://localhost:8090/internal
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_catalog
 spring.datasource.username=user
@@ -16,11 +18,23 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
-jwt.keys.directory=./dev-keys
-jwt.expiration.access-token=900000
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
+#jwt.keys.directory=./dev-keys
+#jwt.expiration.access-token=900000
+#jwt.issuer=b2g-auth-service
+#jwt.audience=b2g-microservices
 
 # Logging
 logging.level.com.b2g.catalogservice=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+#rabbitMq configurations
+
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+spring.rabbitmq.publisher-confirm-type= correlated
+spring.rabbitmq.publisher-returns= true
+app.rabbitmq.exchange= b2g.topic.exchange
+app.rabbitmq.queue.name= catalog
+app.rabbitmq.routingkey.book.creation=book.created
