--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -20,6 +20,12 @@
             <version>1.18.42</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.3.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
