chore(refactoring) : Rest intervention --> Controller are now more RESTful, yaak calls changed accordingly

--- a/yaak/yaak.rq_DdLGy7cLm6.yaml
+++ b/yaak/yaak.rq_DdLGy7cLm6.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_DdLGy7cLm6
 createdAt: 2025-08-24T15:51:14.321021
-updatedAt: 2025-12-10T17:09:02.154511800
+updatedAt: 2025-12-15T16:47:32.381193700
 workspaceId: wk_94bVhSAcpy
 folderId: fl_GBXwSTx9Sx
 authentication: {}
@@ -10,7 +10,7 @@ authenticationType: null
 body:
   text: |-
     {
-      "username": "admin1",
+      "username": "admin",
       "password": "P@ssw0rd!",
       "email": "admin@example.com"
     }
