--- a/lend-service/src/main/resources/application-prod.properties
+++ b/lend-service/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.application.name=rental-service
+spring.application.name=lend-service
 
 # Server Configuration
 server.port=8099
@@ -8,7 +8,7 @@ authService.internal.url=http://localhost:8090/internal
 readerService.internal.url=http://localhost:8098/readers/readerUUID/check/subscription
 catalogService.internal.url=http://localhost:8091/books/
 inventoryService.internal.url=http://localhost:8095/inventory/
-subscriptionService.internal.url=http://localhost:8095/subscription/
+subscriptionService.internal.url=http://localhost:8098/subscriptions/readerUUID
 
 
 # Database Configuration
