--- a/recommendation-service/src/main/resources/application-prod.properties
+++ b/recommendation-service/src/main/resources/application-prod.properties
@@ -13,14 +13,15 @@ spring.neo4j.pool.max-connection-pool-size=100
 spring.neo4j.pool.max-connection-lifetime=1800000
 spring.neo4j.pool.connection-acquisition-timeout=5000
 
-
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.amqp.rabbit=DEBUG
 spring.rabbitmq.host= localhost
 spring.rabbitmq.port= 5672
 spring.rabbitmq.username= guest
 spring.rabbitmq.password= guest
 app.rabbitmq.exchange= b2g.topic.exchange
 app.rabbitmq.service.prefix=recommendation
-
+spring.rabbitmq.dynamic=true
 #spring.rabbitmq.publisher-confirm-type= correlated
 #spring.rabbitmq.publisher-returns= true
 app.rabbitmq.bindingkey.book.creation=book.created
