--- a/yaak/yaak.rq_BUmaNiouP6.yaml
+++ b/yaak/yaak.rq_BUmaNiouP6.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_BUmaNiouP6
 createdAt: 2025-08-24T17:59:00.799524
-updatedAt: 2025-12-10T17:09:45.410810400
+updatedAt: 2025-12-16T18:59:44.221615600
 workspaceId: wk_94bVhSAcpy
 folderId: fl_GBXwSTx9Sx
 authentication: {}
@@ -10,7 +10,7 @@ authenticationType: null
 body:
   text: |-
     {
-      "username": "admin1",
+      "username": "admin",
       "password": "P@ssw0rd!"
     }
 bodyType: application/json
@@ -22,6 +22,6 @@ headers:
   id: tEGMWGJ0f5
 method: POST
 name: Login
-sortPriority: 2000.0
+sortPriority: 1500.0005
 url: http://localhost:8090/auth/login
 urlParameters: []
