chore(refactoring) : Inventory - Lend collaboration reintegrated

--- a/yaak/yaak.fl_S3VUKLqvEu.yaml
+++ b/yaak/yaak.fl_S3VUKLqvEu.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_S3VUKLqvEu
 createdAt: 2025-11-14T13:35:01.275531200
-updatedAt: 2025-11-14T13:35:01.275532200
+updatedAt: 2025-12-16T22:19:04.123848300
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Review
-sortPriority: -1763127300000.0
+sortPriority: 3000.0
