--- a/yaak/yaak.fl_qYLLc5Jiv3.yaml
+++ b/yaak/yaak.fl_qYLLc5Jiv3.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_qYLLc5Jiv3
 createdAt: 2025-11-27T20:32:42.672722400
-updatedAt: 2025-11-27T20:32:42.672723200
+updatedAt: 2025-12-16T22:19:04.115837100
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Lends
-sortPriority: -1764275500000.0
+sortPriority: 1000.0
