--- a/yaak/yaak.fl_zS52BCUtYG.yaml
+++ b/yaak/yaak.fl_zS52BCUtYG.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_zS52BCUtYG
 createdAt: 2025-11-25T18:32:09.126470500
-updatedAt: 2025-11-25T18:32:09.126471700
+updatedAt: 2025-12-16T22:19:04.120289300
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Readers
-sortPriority: -1764095600000.0
+sortPriority: 2000.0
