feat(User stories) : Backend Lending and Inventory are ready for UserStories "Online lend request" and UserStory "Book retrieve at a bookshop"

--- a/inventory-service/src/main/resources/application-prod.properties
+++ b/inventory-service/src/main/resources/application-prod.properties
@@ -17,6 +17,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+spring.rabbitmq.publisher-confirm-type= correlated
+spring.rabbitmq.publisher-returns= true
+
 app.rabbitmq.routingkey.lend.request.created=lend.request.created
+app.rabbitmq.bindingkey.lend.book.reserved=lend.book.reserved
 
 
