--- a/lend-service/src/main/resources/application-prod.properties
+++ b/lend-service/src/main/resources/application-prod.properties
@@ -46,7 +46,8 @@ app.rabbitmq.exchange= b2g.topic.exchange
 app.rabbitmq.queue.name= rental
 
 app.rabbitmq.routingkey.lend.request.created=lend.request.created
-app.rabbitmq.bindingkey.lend.ready=lend.ready
+app.rabbitmq.routingkey.lend.ready=lend.ready
+app.rabbitmq.bindingkey.book.reserved=lend.book.reserved
 app.rabbitmq.routingkey.lend.created=lend.created
 
 app.rabbitmq.routingkey.lend.failed=lend.failed
