chore(Lend) : Jwt validation is now done in the service to avoid too many calls to auth

--- a/lend-service/src/main/resources/application-prod.properties
+++ b/lend-service/src/main/resources/application-prod.properties
@@ -5,7 +5,8 @@ server.port=8099
 
 
 authService.internal.url=http://localhost:8090/internal
-readerService.internal.url=http://localhost:8098/readers/readerUUID/check/subscription
+authService.jwks.url=http://localhost:8090/auth/.well-known/jwks.json
+jwt.public-key.cache.seconds=300
 catalogService.internal.url=http://localhost:8091/books/
 inventoryService.internal.url=http://localhost:8095/inventory/
 subscriptionService.internal.url=http://localhost:8098/subscriptions/readerUUID
