--- a/inventory-service/src/main/resources/application-prod.properties
+++ b/inventory-service/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.application.name=inventory-service
 
 # Server Configuration
 server.port=8095
-
+authService.internal.url=http://localhost:8090
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_library
 spring.datasource.username=user
