chore(reader) : added find reader by different specifications + minor bug fixes and better lending lifecycle

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,6 +101,15 @@ services:
     networks:
       - b2g-net
 
+  client-frontend-service:
+    image: gabrieleban/my-module:latest
+    container_name: client-frontend-service
+    ports:
+      - "5173:80"
+    networks:
+      - b2g-net
+
+
   notification-service:
     build:
       context: .
