--- a/lend-service/src/main/resources/application-prod.properties
+++ b/lend-service/src/main/resources/application-prod.properties
@@ -48,7 +48,7 @@ app.rabbitmq.queue.name= rental
 
 app.rabbitmq.routingkey.lend.request.created=lend.request.created
 app.rabbitmq.routingkey.lend.ready=lend.ready
-app.rabbitmq.bindingkey.catalogBook.reserved=lend.catalogBook.reserved
+app.rabbitmq.bindingkey.book.reserved=lend.book.reserved
 app.rabbitmq.routingkey.lend.created=lend.created
 
 app.rabbitmq.routingkey.lend.failed=lend.failed
