--- a/lend-service/src/main/resources/application-prod.properties
+++ b/lend-service/src/main/resources/application-prod.properties
@@ -3,10 +3,11 @@ spring.application.name=lend-service
 # Server Configuration
 server.port=8099
 
-
-authService.internal.url=http://localhost:8090/internal
+#authentication
+authService.internal.url=http://localhost:8090
 authService.jwks.url=http://localhost:8090/auth/.well-known/jwks.json
 jwt.public-key.cache.seconds=300
+
 catalogService.internal.url=http://localhost:8091/books/
 inventoryService.internal.url=http://localhost:8095/inventory/
 subscriptionService.internal.url=http://localhost:8098/subscriptions/readerUUID
