--- a/yaak/yaak.rq_YtrZVhwLQZ.yaml
+++ b/yaak/yaak.rq_YtrZVhwLQZ.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_YtrZVhwLQZ
 createdAt: 2025-12-15T20:49:09.814295200
-updatedAt: 2025-12-26T10:01:24.443167800
+updatedAt: 2026-01-05T14:45:00.903952100
 workspaceId: wk_94bVhSAcpy
 folderId: fl_qYLLc5Jiv3
 authentication: {}
@@ -27,9 +27,9 @@ url: http://localhost:8099/lendable-formats
 urlParameters:
 - enabled: true
   name: bookId
-  value: 72db787f-e6ea-41ad-8827-81f25e431c06
+  value: 95db9fb3-7985-4269-b569-026f5caaa862
   id: t7GDj4A2aZ
 - enabled: true
   name: ''
   value: ''
-  id: z9V5bgvifF
+  id: pCvRNnknm3
