fix fatal error fixed when creating new book

--- a/Infrastructure-compose.yaml
+++ b/Infrastructure-compose.yaml
@@ -56,6 +56,20 @@ services:
       - neo4j_logs:/logs
     networks:
       - b2g-net
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin123
+    ports:
+      - "9000:9000"   # API S3
+      - "9001:9001"   # Console Web
+    volumes:
+      - minio_data:/data
+    networks:
+      - b2g-net
 
 volumes:
   pg_data:
